apps/prod/pihole/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
