apps/prod/pihole/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-exporter
  namespace: pihole
  labels:
    app: pihole-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-exporter
  template:
    metadata:
      labels:
        app: pihole-exporter
    spec:
      containers:
      - name: pihole-exporter
        image: ekofr/pihole-exporter:latest
        ports:
        - containerPort: 9617
          name: metrics
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9617
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-exporter
  namespace: pihole
  labels:
    app: pihole-exporter
spec:
  type: ClusterIP
  ports:
  - port: 9617
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: pihole-exporter
